# kachanios-public

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
kachanios/: __init__.py  agents.py  cli.py  memory.py  models.py  orchestrator.py  router.py
src/: __init__.py  models.py  orchestrator.py  router.py
tests/: test_public_architecture.py  test_router.py
